# cpp-qt-http-demo

./: .gitignore  CMakeLists.txt  README.md
client/Client_Gui/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
server/: CMakeLists.txt
server/src/: BCrypt.hpp  server.cpp
src/: server.cpp
